@@ -2,6 +2,7 @@ package org.jabref.gui.externalfiles;
 
 import java.io.File;
 import java.io.IOException;
+import java.nio.file.DirectoryStream;
 import java.nio.file.DirectoryStream.Filter;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -90,9 +91,10 @@ public class UnlinkedFilesCrawler extends BackgroundTask<FileNodeViewModel> {
         // Filters:
         //   1. UnlinkedPDFFileFilter
         //   2. GitIgnoreFilter
-        ChainedFilters filters = new ChainedFilters(unlinkedPDFFileFilter, new GitIgnoreFileFilter(directory));
+        ChainedFilters filters = new ChainedFilters(List.of(unlinkedPDFFileFilter, new GitIgnoreFileFilter(directory)));
         Map<Boolean, List<Path>> directoryAndFilePartition;
-        try (Stream<Path> filesStream = StreamSupport.stream(Files.newDirectoryStream(directory, filters).spliterator(), false)) {
+        try (DirectoryStream<Path> dirStream = Files.newDirectoryStream(directory, filters);
+             Stream<Path> filesStream = StreamSupport.stream(dirStream.spliterator(), false)) {
             directoryAndFilePartition = filesStream.collect(Collectors.partitioningBy(Files::isDirectory));
         } catch (IOException e) {
             LOGGER.error("Error while searching files", e);
@@ -137,7 +139,7 @@ public class UnlinkedFilesCrawler extends BackgroundTask<FileNodeViewModel> {
         // create and add FileNodeViewModel to the FileNodeViewModel for the current directory
         fileNodeViewModelForCurrentDirectory.getChildren().addAll(resultingFiles.stream()
                 .map(FileNodeViewModel::new)
-                .collect(Collectors.toList()));
+                .toList());
 
         return fileNodeViewModelForCurrentDirectory;
     }
